--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 
 <html>
-    嗨嗨 大家好 我是資工二曾翊倫
+    <head>
+        
+    </head>
+    <body>
+        <ul type="circle">
+            <li><a href="Hot\africa.html">非洲動物</a></li>
+            <li><a href="Hot\asia.html"></a>亞州動物</li>
+            <li><a href="Hot\kiwi.html"></a>奇異鳥</li>
+            <li><a href="Hot\koala.html"></a>無尾熊</li>
+            <li><a href="Hot\penguin.html"></a>企鵝</li>
+        </ul>
+        推薦:<a href="http://www.zoo.gov.tw">木柵動物園</a>
+    </body>
 </html>
