--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             <li><a href="Hot\penguin.html">企鵝</a></li>
         </ul>
         推薦:<a href="http://www.zoo.gov.tw">木柵動物園</a>
+        <img src="Hot\jp3.jpg" href="Hot\penguin.html" >
     </body>
 </html>
