--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <li><a href="Hot\penguin.html">企鵝</a></li>
         </ul>
         推薦:<a href="http://www.zoo.gov.tw">木柵動物園</a>
-        <a href="https://yeelunz.github.io/"><img src="jp3.jpg"></a>
+        <a href="https://yeelunz.github.io/"><img src="Hot\jp3.jpg"></a>
     </body>
 </html>
