--- a/finPro/years.html
+++ b/finPro/years.html
@@ -15,7 +15,7 @@
 
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
-            <font size="4"><strong><b>Linkin Park Introduction</b></strong></font>
+            <img src="https://lezebre.lu/images/detailed/80/17536-linkin-park-logo.png" width="25" height="25" style="position: relative;top: -2px;"><font size="4"><strong><b> Linkin Park Introduction</b></strong></font>
         </a>
         <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="index.html">主頁</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="member.html">成員</a>
