--- a/finPro/album.html
+++ b/finPro/album.html
@@ -15,7 +15,9 @@
 
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
-            <img src="https://lezebre.lu/images/detailed/80/17536-linkin-park-logo.png" width="25" height="25" style="position: relative;top: -2px;"><font size="4"><strong><b> Linkin Park Introduction</b></strong></font>
+            <img src="https://lezebre.lu/images/detailed/80/17536-linkin-park-logo.png" width="25" height="25"
+                style="position: relative;top: -2px;">
+            <font size="4"><strong><b> Linkin Park Introduction</b></strong></font>
         </a>
         <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="index.html">主頁</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="member.html">成員</a>
@@ -26,46 +28,129 @@
     <br>
 
 
-    <div class="card mb-3" style="max-width: 540px;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="..." class="img-fluid rounded-start" alt="專輯封面">
+    <div class="card mb-3">
+        <img src="https://i.imgur.com/pJ0n5fU.png" class="card-img-top" alt="..." style="max-height: 100px;">
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list"
+                    href="#list-home" role="tab" aria-controls="list-home">混合理論 Hybrid Theory (2000)</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list"
+                    href="#list-profile" role="tab" aria-controls="list-profile">天空之城—美特拉 Meteora (2003)</a>
+                <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list"
+                    href="#list-messages" role="tab" aria-controls="list-messages">末日警鐘 毀滅·新生 Minutes to Midnight
+                    (2007)</a>
+                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list"
+                    href="#list-settings" role="tab" aria-controls="list-settings">烈日千陽 A Thousand Suns (2010)</a>
+                <a class="list-group-item list-group-item-action" id="list-settings2-list" data-bs-toggle="list"
+                    href="#list-settings2" role="tab" aria-controls="list-settings2">生命 進化 原點 Living Things (2012)</a>
+                <a class="list-group-item list-group-item-action" id="list-settings3-list" data-bs-toggle="list"
+                    href="#list-settings3" role="tab" aria-controls="list-settings3">獵捕行動 The Hunting Party (2014)</a>
+                <a class="list-group-item list-group-item-action" id="list-settings4-list" data-bs-toggle="list"
+                    href="#list-settings4" role="tab" aria-controls="list-settings4">光芒再現 One More Light (2017)</a>
             </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title">album</h5>
-                    <p class="card-text">
+        </div>
+        <div class="col-8">
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
 
-                    <div class="accordion" id="accordionPanelsStayOpenExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
-                                    aria-controls="panelsStayOpen-collapseOne">
-                                    song
-                                </button>
-                            </h2>
-                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
-                                aria-labelledby="panelsStayOpen-headingOne">
-                                
-                                    <ul class="list-group">
-                                        <li class="list-group-item">1</li>
-                                        <li class="list-group-item">2</li>
-                                        <li class="list-group-item">3</li>
-                                        <li class="list-group-item">4</li>
-                                        <li class="list-group-item">5</li>
-                                      </ul>
-                                
-                            </div>
-                        </div>
+                    <!-- content -->
+                    <img src="https://s.eslite.dev/upload/product/l/2681933155005/20201023124121514001.jpg" alt="..."
+                        style="display:block; margin:auto; max-width: 200;max-height: 200;">
+                    <h3 class="card-title" style="text-align: center;">混合理論(2000)</h3>
+                    <h6 class="card-title" style="color: rgb(114, 114, 114);text-align: center;">Hybrid Theory</h6>
+                    <iframe src="https://open.spotify.com/embed/album/6hPkbAV3ZXpGZBGUvL6jVM?utm_source=generator"
+                        width="110%" height="450" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <!-- content -->
 
-                    </div>           
-                </p>
-                <p class="card-text"><img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Spotify_App_Logo.svg" width="18" height="18" style="position: relative;top: -2px;"><small class="text-muted"> Listening on Spotify</small></p>
+                </div>
+                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                    <!-- content -->
+                    <img src="https://upload.wikimedia.org/wikipedia/zh/1/19/Linkin_Park_Meteora.jpg" alt="..."
+                        style="display:block; margin:auto; max-width: 200;max-height: 200;">
+                    <h3 class="card-title" style="text-align: center;">天空之城—美特拉(2003)</h3>
+                    <h6 class="card-title" style="color: rgb(114, 114, 114);text-align: center;">Meteora</h6>
+                    <iframe src="https://open.spotify.com/embed/album/0f7R0jf0pcTb6K6IVVPcMD?utm_source=generator"
+                        width="110%" height="450" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <!-- content -->
+
+                </div>
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                    <!-- content -->
+                    <img src="https://upload.wikimedia.org/wikipedia/zh/8/8c/Minutes_to_Midnight.jpg" alt="..."
+                        style="display:block; margin:auto; max-width: 200;max-height: 200;">
+                    <h3 class="card-title" style="text-align: center;">末日警鐘 毀滅·新生(2007)</h3>
+                    <h6 class="card-title" style="color: rgb(114, 114, 114);text-align: center;">Minutes to Midnight
+                    </h6>
+                    <iframe src="https://open.spotify.com/embed/album/7pgs38iLfEqUtwgCRgvbND?utm_source=generator"
+                        width="110%" height="450" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <!-- content -->
+                </div>
+                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                    <!-- content -->
+                    <img src="https://upload.wikimedia.org/wikipedia/zh/0/05/A_Thousand_Suns.jpg" alt="..."
+                        style="display:block; margin:auto; max-width: 200;max-height: 200;">
+                    <h3 class="card-title" style="text-align: center;">烈日千陽(2010)</h3>
+                    <h6 class="card-title" style="color: rgb(114, 114, 114);text-align: center;">A Thousand Suns
+                    </h6>
+                    <iframe src="https://open.spotify.com/embed/album/4fy0SXW5G8evBCo2A3kn02?utm_source=generator"
+                        width="110%" height="450" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+                    <!-- content -->
+                </div>
+                <div class="tab-pane fade" id="list-settings2" role="tabpanel" aria-labelledby="list-settings2-list">
+                    <!-- content -->
+                    <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/5/51/Linkin_Park_LIVING_THINGS_album_cover.jpg/220px-Linkin_Park_LIVING_THINGS_album_cover.jpg"
+                        alt="..." style="display:block; margin:auto; max-width: 200;max-height: 200;">
+                    <h3 class="card-title" style="text-align: center;">生命 進化 原點(2012)</h3>
+                    <h6 class="card-title" style="color: rgb(114, 114, 114);text-align: center;">Living Things
+                    </h6>
+                    <iframe src="https://open.spotify.com/embed/album/4XHIjbhjRmqWlosjj5rqSI?utm_source=generator"
+                        width="110%" height="450" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <!-- content -->
+                </div>
+                <div class="tab-pane fade" id="list-settings3" role="tabpanel" aria-labelledby="list-settings3-list">
+                    <!-- content -->
+                    <img src="https://upload.wikimedia.org/wikipedia/zh/e/e2/THE_HUNTING_PARTY.jpg" alt="..."
+                        style="display:block; margin:auto; max-width: 200;max-height: 200;">
+                    <h3 class="card-title" style="text-align: center;">獵捕行動(2014)</h3>
+                    <h6 class="card-title" style="color: rgb(114, 114, 114);text-align: center;">The Hunting Party
+                    </h6>
+                    <iframe src="https://open.spotify.com/embed/album/3XB2yloP7l00tEUmaODtVi?utm_source=generator"
+                        width="110%" height="450" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+                    <!-- content -->
+                </div>
+                <div class="tab-pane fade" id="list-settings4" role="tabpanel" aria-labelledby="list-settings4-list">
+                    <!-- content -->
+                    <img src="https://upload.wikimedia.org/wikipedia/zh/e/eb/Linkin_Park_One_More_Light.jpg" alt="..."
+                        style="display:block; margin:auto; max-width: 200;max-height: 200;">
+                    <h3 class="card-title" style="text-align: center;">光芒再現(2017)</h3>
+                    <h6 class="card-title" style="color: rgb(114, 114, 114);text-align: center;">One More Light
+                    </h6>
+                    <iframe src="https://open.spotify.com/embed/album/5Eevxp2BCbWq25ZdiXRwYd?utm_source=generator"
+                        width="110%" height="450" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+                    <!-- content -->
+                </div>
             </div>
         </div>
     </div>
-    </div>
+    <!-- albu2 -->
+
+    <!-- albu3 -->
+
+    <!-- albu4 -->
+    <!-- albu5 -->
+    <!-- albu6 -->
 
 
 
