--- a/finPro/years.html
+++ b/finPro/years.html
@@ -8,6 +8,12 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
     <meta charset="utf-8">
+    <style>
+        .a {
+            padding-left: 150px;
+            padding-right: 150px;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,7 +21,9 @@
 
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
-            <img src="https://lezebre.lu/images/detailed/80/17536-linkin-park-logo.png" width="25" height="25" style="position: relative;top: -2px;"><font size="4"><strong><b> Linkin Park Introduction</b></strong></font>
+            <img src="https://lezebre.lu/images/detailed/80/17536-linkin-park-logo.png" width="25" height="25"
+                style="position: relative;top: -2px;">
+            <font size="4"><strong><b> Linkin Park Introduction</b></strong></font>
         </a>
         <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="index.html">主頁</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="member.html">成員</a>
@@ -23,11 +31,262 @@
         <a class="flex-sm-fill text-sm-center nav-link  active" href="years.html">年代</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="about.html">關於</a>
     </nav>
-    <br>
-    引用資料...
-    <br>
-    ....
-    
+
+    <nav id="navbar-example1" class="navbar navbar-light bg-light px-5">
+        <a class="navbar-brand" href="#">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#scrollspyHeading2">1996-</a>
+                </li>
+
+                <li><a class="nav-link" href="#scrollspyHeading3">2000-</a></li>
+
+                <li><a class="nav-link" href="#scrollspyHeading4">2002-</a></li>
+                <li><a class="nav-link" href="#scrollspyHeading5">2004-</a></li>
+                <li><a class="nav-link" href="#scrollspyHeading6">2006-</a></li>
+                <li><a class="nav-link" href="#scrollspyHeading7">2008-</a></li>
+                <li><a class="nav-link" href="#scrollspyHeading8">2011-</a></li>
+                <li><a class="nav-link" href="#scrollspyHeading9">2014-</a></li>
+                <li><a class="nav-link" href="#scrollspyHeading10">2017-</a></li>
+
+            </ul>
+        </a>
+
+
+    </nav>
+
+    <div class="a">
+
+        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example"
+            tabindex="0">
+            <h2 id="scrollspyHeading1" ><br> <span class="badge bg-primary" style="position: relative;right: -10px;">
+                    概述</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+                    聯合公園（英語：Linkin
+                    Park）是一組來自美國加州阿古拉山的搖滾樂團。樂團目前的陣容包括創始成員：人聲/節奏吉他手麥克·篠田、主音吉他手布萊德·達爾森、貝斯手戴維·法雷爾、DJ/唱片歌手喬瑟夫·韓和鼓手羅伯·博登。已離開的成員有主唱查斯特·班寧頓和馬克·維克菲爾。聯合公園的音樂風格被歸類為另類搖滾，其早期融合了重金屬和嘻哈，之後又過渡到電子和流行音樂。<br>
+
+                    聯合公園於1996年成立，2000年以首張專輯《混合理論》在主流音樂市場上獲得成功，並得到美國唱片業協會的鑽石認證。樂團接下來發行的《天空之城—美特拉》專輯也取得成功，在2003年的美國告示牌二百大專輯榜上排名第一。2007年，聯合公園第三張專輯《末日警鐘
+                    毀滅·新生》不再是新金屬的風格，而走向主流。<br>
+
+                    2010年，聯合公園全球發行的第四張專輯《烈日千陽》延續上一張的概念，並加入了更多的電子音樂元素。2012年，聯合公園推出的第五張專輯《生命 進化
+                    原點》結合了過往各張專輯的特色，於6月26日全球發行。2014年。聯合公園推出了第六張專輯《獵捕行動》則回歸了最初風格。2017年，聯合公園發布了他們的第七張專輯《光芒再現》，曲風偏向流行音樂風格。當長期擔任主唱的班寧頓於2017年7月自殺身亡後，樂團陷入停擺。2020年4月，貝斯手戴維·法雷爾透露樂團正在研究新音樂。<br>
+
+                    聯合公園是21世紀最暢銷的樂團之一，也是世界上最暢銷的音樂藝術家之一，在全球已售出超過1億張唱片。他們曾獲兩項葛萊美獎、六項全美音樂獎、兩項告示牌音樂獎、四項MTV音樂錄影帶大獎、十項MTV歐洲音樂大獎和三項世界音樂獎。[7][8]2003年，MTV2將聯合公園評為音樂影片時代中第六大的樂團和新千禧年第三好的樂團。《告示牌》在「十年最佳藝人」名單中將聯合公園排名第19位。2012年，該樂團在Bracket
+                    Madness的VH1民意測驗中被評選為2000年代最偉大的藝術家。 2014年，該樂團被Kerrang!宣佈為「世界上最大的搖滾樂團」。<br>
+
+                    聯合公園曾多次與其他音樂人合作，當中包括2004年與美國饒舌歌手Jay-Z合作推出《衝擊理論》。<br>
+                </div>
+            </div>
+            <!-- content -->
+
+            </p>
+            <h2 id="scrollspyHeading2"><span class="badge bg-primary" style="position: relative;right: -10px;">
+                    早期（1996－2000年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+                    1993年，查斯特·班寧頓與肖恩·多戴爾（Sean Dowdell）在亞利桑那州鳳凰城組建了Grey Daze樂團。<br>
+
+                    1996年，身為學校同窗的主唱麥克·篠田與吉他手布萊德·達爾森在麥克的臥室兼迷你錄音室錄下第一首歌，兩人隨後在高中結識鼓手羅伯·博登。麥克高中畢業後，到藝術中心設計學院（Art Center
+                    College
+                    of
+                    Design）就讀平面設計和插畫，在學校中認識了DJ喬瑟夫·漢恩。而在加州大學洛杉磯分校中，布萊德認識了貝斯手戴維·法雷爾及主唱馬克·維克菲爾，他們初步組成為Xero樂團，錄下第一張試驗專輯。但是在之後，主唱馬克·維克菲爾離隊，而戴維·法雷爾也離隊去參加一些樂團擔任如Tasty
+                    Snax的LIVE貝斯手，他在Xero的位置則被凱爾·克里斯坦取代。<br>
+
+                    在同時，Xero被各個唱片公司拒絕簽約，麥克決定刊登廣告公開招聘主唱，在傑夫·布魯（Jeff
+                    Blue）的協助下，查斯特·班寧頓在1999年加入。因為他野性的咆哮而成為樂團中的主唱，同時戴維·法雷爾也回歸Xero，而凱爾·克里斯坦則離隊。之後，樂團改名為「混合理論」，並再出一張同名EP。但是他們發覺樂團名稱有與他團雷同的情況，因此再次改名為聯合公園（Linkin
+                    Park），既是幽默的說法，也對聖塔莫尼卡的林肯公園（Lincoln Park）表示敬意。<br>
+                    但是他們改名後，一直找不到唱片公司簽約。他們再找傑夫·布魯（前身為Zomba
+                    Music的副總裁，現時為華納兄弟唱片公司的副總裁）幫忙，最終在他的協助下於1999年與時代華納下屬的華納兄弟唱片公司簽約.<br>
+                </div>
+            </div>
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading3"> <span class="badge bg-primary" style="position: relative;right: -10px;">
+                    《混合理論》時期（2000－2002年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    與華納兄弟唱片公司簽約後，在2000年，樂團發行了第一張唱片《混合理論》。錄製專輯時，貝斯手戴維·法雷爾再次離開樂團，他的位置被史卡特·科奇歐取代。史卡特·科奇歐協助製作在《混合理論》內的歌曲〈One
+                    Step
+                    Closer〉，也在該首歌曲的音樂錄影帶中出現。之後，貝斯手戴維·法雷爾再度回歸樂團，而史卡特·科奇歐則離開樂團。《混合理論》內的歌曲〈Crawling〉內的MV則成為戴維·法雷爾回歸樂團後的首個音樂錄影帶。<br>
+
+                    樂團在2001年與瑪麗蓮·曼森、滑結樂團、瘋狂小鎮、蟑螂老爹和搗亂等樂團一起參加了奧玆·奧斯本（Ozzie
+                    Osburne）組織的「Ozzfest」巡迴演唱。其後聯合公園在2002年組織起了自己的定期巡迴演唱——「計畫：革合」（Projekt:
+                    Revolution）。在「計畫：革合」中除了他們樂團外，還有很多的歌手和樂團一起出席。<br>
+
+                    2002年，他們發行了《混合理論》的混音版本專輯《顛覆混合理論》，其中在專輯內的單曲《Krwlng》在2010年溫哥華冬季奧運的花樣滑冰項目中被使用（在英國代表希妮德與約翰·凱爾姐弟檔溜冰時）。<br>
+                </div>
+            </div>
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading4"><span class="badge bg-primary" style="position: relative;right: -10px;">
+                    《天空之城—美特拉》時期（2002－2004年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    在2003年，他們發行了全新的大碟《天空之城—美特拉》。同年晚些時候，他們同著名新金屬樂團Limp Bizkit和激流金屬（鞭撻金屬）樂團Metallica參加了名為Summer Sanitarium
+                    Tour 2003的大巡演。聯合公園還節選了在德州的達拉斯、休士頓演出他們之前三張大碟中的單曲時的精彩部分，用以發行一張新的CD/VCD套裝，《我們的出口 德州現場專輯全紀錄》。<br>
+
+                    2004年，聯合公園開始了他們的《天空之城—美特拉》世界巡演。除了他們自己，P.O.D、Hoobastank和年度故事等樂團也參與了這一巡演。<br>
+                </div>
+            </div>
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading5"><span class="badge bg-primary" style="position: relative;right: -10px;">
+                    外部專輯時期（2004－2006年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    2005年麥克·篠田以單飛不解散的名義從聯合公園脫穎而出，推出個人的外部專輯《黑暗堡壘》，找來了知名饒舌團體Style Of Beyond組合發行個人單飛以來的首張專輯《火線同盟》。<br>
+
+                    2006年聯合公園在知名影音網站YouTube上開設了「linkinparktv」的頻道（The Official 聯合公園 YouTube Channel，縮寫
+                    LPTV），播放樂團最近的錄像以及MV。<br>
+                </div>
+            </div>
+
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading6"><span class="badge bg-primary" style="position: relative;right: -10px;"> 《末日警鐘
+                    毀滅•新生》時期（2006－2008年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    在2007年，睽違4年終於發行了全新的大碟《末日警鐘 毀滅·新生》。<br>
+
+                    2007年聯合公園在亞洲、大洋洲舉行巡迴演唱，分別在雪梨、曼谷、新加坡、台北、上海、香港、東京、首爾等地舉行演唱會。11月16在臺北的演唱會中吸引將近4萬名樂迷，是此次巡迴演唱亞洲地區中入場人數最多的一場。<br>
+
+                    2008年樂團發行了繼《我們的出口 德州現場專輯全紀錄》之後的又一張現場專輯《真愛旅程：終結·進化
+                    密爾頓現場專輯全紀錄》，內容是在密爾頓的現場演唱。這場現場專輯最大的特色是邀請了美國著名饒舌歌手Jay-Z同臺演出。<br>
+
+                    而主唱查斯特也表示第四張專輯將會是張概念專輯，在十月份的MTV訪問中，他表示錄製工作將在十二月展開，預計六週，預期新專輯會在2009年的年中推出。但2009年3月，麥克在其個人網誌透露新專輯將會延2010年推出。<br>
+                </div>
+            </div>
+
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading7"><span class="badge bg-primary" style="position: relative;right: -10px;">
+                    《烈日千陽》時期（2008－2011年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    2008年原定10月17在臺灣的臺北中山足球場演唱會因主唱查斯特背部受傷取消。為補償台灣歌迷，於2009年8月13日到台北板橋體育場舉辦演唱會「2009 Summer Rock
+                    Summit夏日搖滾高峰會」，且除了聯合公園，還將率領好把戲合唱團、全美反對陣線兩大新生代樂團一同表演。演唱會收益7千萬，其中因為他們得知莫拉克風災造成慘重傷害，在開唱前就宣布捐款2萬美金（約65萬台幣）給世界展望會，協助賑災。<br>
+
+                    2009年8月15日，在上海舉行演唱會。<br>
+
+
+                    聯合公園2007年在美國麻薩諸塞州諾爾頓市的Projekt Revolution巡迴演出<br>
+                    聯合公園暑假即將來台開唱，也為2009年超級賣座強片《變形金剛》演唱新片主題曲《New
+                    Divide》，電影鬼才導演麥可·貝非常欣賞聯合公園的音樂才能，2009年《變形金剛》第二集《變形金剛：復仇之戰》的主題曲再次交由聯合公園來製作，電影預計6月24日上映，收錄此曲的電影原聲帶也將同步發行。聯合公園的新歌也將是2009年夏天來台演唱會最熱門的指定新曲。<br>
+
+                    繼2005年MC主唱篠田以單飛不解散的名義跳脫聯合公園組成黑暗堡壘，推出個人的嘻哈團體專輯《火線同盟》，主唱查斯特·班寧頓暫時放下聯合公園主唱的身份，所自組的樂團「黑暗曙光」終於誕生，並於2009年10月13日推出了自組樂團的首張專輯《破土重生》，由查斯特擔任主唱及創作首腦，另外找來樂團Julien-K裡的五位團員Ryan
+                    Shuck、Amir Derakh、Brandon Belsky、Elias Andra、Anthony Valcic分別擔任第一吉他手、第二吉他手、貝斯手、鼓手及鍵盤手兼合成樂器取樣。<br>
+
+                    2010年1月30日，主唱查斯特所率領的自組樂團黑暗曙光來台灣台北華山創意園區開唱。<br>
+
+                    2010年6月6日，樂團表示他們的新專輯已經接近完工階段，並公佈演唱會將從10月20日的德國柏林站開跑。<br>
+
+                    2010年8月2日正式宣佈9月14日樂團將發行第四張錄音室專輯《烈日千陽》，新專輯的首波單曲《The
+                    Catalyst》也在8月4日全曲首播。目前部分音源將公開，提供樂迷們下載並歡迎大家重新混音編曲，樂團廣邀世界各地音樂好手參予這混音活動，得勝者可以遠赴美國與樂團錄音，台灣區的華納唱片特別邀請四組示範代表：馬念先、百樂、猴子飛行員Tony以及蘇通達一起共襄盛舉這次音樂交流的活動。另一方面，新單曲《The
+                    Catalyst》也與榮譽勳章2010（Medal of Honor 2010）合作，作為紀錄版本的宣傳片的主打曲。<br>
+                </div>
+            </div>
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading8"><span class="badge bg-primary" style="position: relative;right: -10px;">
+                    《生命 進化 原點》時期（2011－2013年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    2011年4月20日，聯合公園在新專輯《烈日千陽》中的《Iridescent》最終被確定成為《變型金剛3：黑月降臨》（Transformers: Dark of the
+                    Moon）的主題曲，聯合公園特意重新編曲《Iridescent》的混音版：《Iridescent
+                    Remix》。這是聯合公園繼《變形金剛》和《變形金剛：復仇之戰》之後，第三次為這個電影系列演唱主題曲。並參加了於2011年6月23日在莫斯科舉行的《變形金剛3》的全球首映式。在首映式之前，聯合公園在紅場舉行一個免費的演唱會為電影宣傳造勢。2011年9月6日和18-19日，聯合公園分別在香港和臺灣的臺北舉行烈日千陽全球巡演的香港站及臺灣站演唱會。<br>
+
+                    2011年11月，聯合公園與延斯·斯托爾滕貝格、雷克斯·蒂勒森、蘇珊娜·馬爾科拉、阿斯瑪·賈哈格日等人共同被聯合國授予「全球領袖獎」（Global Leadership Awards）。<br>
+
+                    2011年底，主唱麥克·篠田表示聯合公園第五張專輯將於2012年完工。<br>
+
+                    2012年3月29日，主唱麥克·篠田宣布樂團第五張專輯的首隻單曲《Burn It Down》將於4月16日公布。[14] 並且為電影《全面突襲》操刀製作電影配樂。<br>
+
+                    2012年4月16日，樂團在官網上放出了《Burn It Down》的試聽[16]，並公布了第五張專輯《生命 進化 原點》的發售時間為2012年6月26日。<br>
+
+                    2012年5月24日，新專輯的首支主打曲《Burn It
+                    Down（燃燒殆盡）》的音樂錄影帶放出並由英國廣播公司第一台公布了新專輯中第二支主打曲《Lies·Misery·Greed》。同日，樂團與一級方程式錦標賽的路特斯車隊合作開發的iOS應用《Linkin
+                    Park GP》提供免費下載，以共同慶祝樂團第五張錄音室專輯發布以及車隊進入F1以來第500場比賽。[18]而專輯中的其中一曲《Powerless》被電影《吸血鬼獵人：林肯總統》選為主題曲。<br>
+
+                    2012年6月26日，第五張錄音室專輯《生命 進化 原點》發售，並且在7月專輯獲得BILLBOARD告示牌 TOP 200 的冠軍。<br>
+
+                    2013年5月18日，查斯特·班寧頓加入美國搖滾樂團Stone Temple Pilots並擔任樂團主唱，他將代替之前被開除的主唱史考特·威蘭德。<br>
+
+                    2013年10月11日，聯合公園與著名DJ史蒂夫·青木合作電音單曲《A Light That Never Comes》發售。<br>
+
+                    2013年10月25日，推出《生命 進化 原點》的混音專輯《電能補給》。<br>
+                </div>
+            </div>
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading9"><span class="badge bg-primary" style="position: relative;right: -10px;">
+                    《獵捕行動》時期（2014年-2016年）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    2014年6月17日，樂團正式推出第六張錄音室專輯《獵捕行動》。
+
+                    2014年10月17日，樂團DJ喬瑟夫·漢恩執導的電影《商場槍擊案》上映，聯合公園為電影製作了主題曲《白色噪音》。
+
+                    2015年4月14日，聯合公園與史蒂夫·青木再次合作，為其新錄音室專輯《Neon Future II》演唱新單曲《Darker Than Blood》。
+
+                    2015年6月21日，樂團主唱麥克·篠田宣布黑暗堡壘時隔9年再次回歸，並推出了新單曲《Welcome》。在之後樂團的中國和歐洲巡演中，該曲都作為表演曲目之一登場。
+
+                    2015年7月17日起，聯合公園時隔6年再次在中國大陸開唱巡演。
+
+                    2015年11月8日，查斯特宣布將離開Stone Temple Pilots，把更多精力放回到聯合公園上。
+                </div>
+            </div>
+            <!-- content -->
+            </p>
+            <h2 id="scrollspyHeading10"><span class="badge bg-primary" style="position: relative;right: -10px;">
+                    《光芒再現》時期（2017年-）</span></h2>
+            <p>
+                <!-- content -->
+            <div class="card">
+                <div class="card-body">
+
+                    2017年2月16日，聯合公園公開了新單曲《Heavy》，該歌曲由樂團與美國女歌手Kiiara合作，並公布第七張錄音室專輯《光芒再現》於同年5月19日發售。而此專輯為主唱查斯特的遺作。<br>
+
+                    美國時間2017年7月20日，主唱查斯特被發現在洛杉磯的家中自殺身亡。<br>
+
+                    美國時間2017年10月27日，樂團成員在洛杉磯舉辦了一場名為「Linkin Park and Friends Celebrate Life in Honor of Chester
+                    Bennington」的紀念演唱會以紀念在7月去世的樂團主唱查斯特。<br>
+                </div>
+            </div>
+            <!-- content -->
+            </p>
+        </div>
+
+    </div>
 </body>
 
 </html>
