--- a/finPro/about.html
+++ b/finPro/about.html
@@ -8,6 +8,12 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
     <meta charset="utf-8">
+    <style>
+        .a {
+            padding-left: 150px;
+            padding-right: 150px;
+        }
+    </style>
 </head>
 
 <body>
@@ -23,9 +29,9 @@
         <a class="flex-sm-fill text-sm-center nav-link" href="years.html">年代</a>
         <a class="flex-sm-fill text-sm-center nav-link active" href="#">關於</a>
     </nav>
-
+    <br>
    
-
+<div class="a">
     <div class="list-group">
         <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
           關於他們
@@ -36,7 +42,7 @@
           <a href="https://www.youtube.com/channel/UCZU9T1ceaOgwfLRq7OKFU4Q" style="text-decoration:none;"><button type="button" class="list-group-item list-group-item-action"><img src="https://upload.cc/i1/2021/12/11/VLadH8.png" width="35" height="35">&nbsp;Youtube</button></a>
         </button>
       </div>
-    
+    </div>
 
 </body>
 
