--- a/finPro/album.html
+++ b/finPro/album.html
@@ -8,15 +8,20 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
     <meta charset="utf-8">
+    <style>
+        .a {
+            padding-left: 150px;
+            padding-right: 150px;
+        }
+    </style>
 </head>
 
 <body>
 
-
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
             <img src="https://lezebre.lu/images/detailed/80/17536-linkin-park-logo.png" width="25" height="25"
-                style="position: relative;top: -2px;">
+            style="position: relative;top: -2px;">
             <font size="4"><strong><b> Linkin Park Introduction</b></strong></font>
         </a>
         <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="index.html">主頁</a>
@@ -26,7 +31,8 @@
         <a class="flex-sm-fill text-sm-center nav-link" href="about.html">關於</a>
     </nav>
     <br>
-
+    
+    <div class="a">
 
     <div class="card mb-3">
         <img src="https://i.imgur.com/pJ0n5fU.png" class="card-img-top" alt="..." style="max-height: 100px;">
@@ -144,15 +150,9 @@
             </div>
         </div>
     </div>
-    <!-- albu2 -->
-
-    <!-- albu3 -->
-
-    <!-- albu4 -->
-    <!-- albu5 -->
-    <!-- albu6 -->
 
 
+</div>
 
 </body>
 
