--- a/finPro/years.html
+++ b/finPro/years.html
@@ -18,7 +18,7 @@
 
 <body>
 
-
+    
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
             <img src="https://lezebre.lu/images/detailed/80/17536-linkin-park-logo.png" width="25" height="25"
@@ -29,40 +29,42 @@
         <a class="flex-sm-fill text-sm-center nav-link" href="member.html">成員</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="album.html">專輯</a>
         <a class="flex-sm-fill text-sm-center nav-link  active" href="years.html">年代</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="about.html">關於</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="about.html">關於</a>       
     </nav>
 
-    <nav id="navbar-example1" class="navbar navbar-light bg-light px-5">
-        <a class="navbar-brand" href="#">
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading2">1996-</a>
-                </li>
-
-                <li><a class="nav-link" href="#scrollspyHeading3">2000-</a></li>
-
-                <li><a class="nav-link" href="#scrollspyHeading4">2002-</a></li>
-                <li><a class="nav-link" href="#scrollspyHeading5">2004-</a></li>
-                <li><a class="nav-link" href="#scrollspyHeading6">2006-</a></li>
-                <li><a class="nav-link" href="#scrollspyHeading7">2008-</a></li>
-                <li><a class="nav-link" href="#scrollspyHeading8">2011-</a></li>
-                <li><a class="nav-link" href="#scrollspyHeading9">2014-</a></li>
-                <li><a class="nav-link" href="#scrollspyHeading10">2017-</a></li>
-
-            </ul>
-        </a>
 
 
-    </nav>
+    <div class="sticky-top">
+        <nav id="navbar-example1" class="navbar navbar-light bg-light px-5">
+            <a class="navbar-brand" href="#">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading2">1996-</a>
+                    </li>
+
+                    <li><a class="nav-link" href="#scrollspyHeading3">2000-</a></li>
+
+                    <li><a class="nav-link" href="#scrollspyHeading4">2002-</a></li>
+                    <li><a class="nav-link" href="#scrollspyHeading5">2004-</a></li>
+                    <li><a class="nav-link" href="#scrollspyHeading6">2006-</a></li>
+                    <li><a class="nav-link" href="#scrollspyHeading7">2008-</a></li>
+                    <li><a class="nav-link" href="#scrollspyHeading8">2011-</a></li>
+                    <li><a class="nav-link" href="#scrollspyHeading9">2014-</a></li>
+                    <li><a class="nav-link" href="#scrollspyHeading10">2017-</a></li>
+
+                </ul>
+            </a>
+        </nav>
+    </div>
 
     <div class="a">
 
         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example"
             tabindex="0">
-            <h2 id="scrollspyHeading1" ><br> <span class="badge bg-primary" style="position: relative;right: -10px;">
+            <h2 id="scrollspyHeading1"><br> <span class="badge bg-primary" style="position: relative;right: -10px;">
                     概述</span></h2>
             <p>
                 <!-- content -->
